--- a/html/index.html
+++ b/html/index.html
@@ -118,7 +118,7 @@
         <a href="#blog">Blog</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-        <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/dhruvlior" target="_blank" rel="noopener">GitHub</a>
         <a href="https://youtube.com/" target="_blank" rel="noopener">YouTube</a>
       </nav>
     </div>
@@ -433,3 +433,4 @@
   </script>
 </body>
 </html>
+
