--- a/html/index.html
+++ b/html/index.html
@@ -119,7 +119,7 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
-        <a href="https://youtube.com/" target="_blank" rel="noopener">YouTube</a>
+        <a href="https://youtube.com/dhruvlior" target="_blank" rel="noopener">YouTube</a>
       </nav>
     </div>
   </header>
@@ -433,5 +433,6 @@
   </script>
 </body>
 </html>
+
 
 
