--- a/html/index.html
+++ b/html/index.html
@@ -160,7 +160,7 @@
         <article class="card">
           <p>I’m a 20-year-old Computer Science senior from Asia, and I often go by the username <strong>mr lior</strong>.</p>
           <p>My journey into programming began when I was 8 years old. Back then, I loved building with Legos, and one day I stumbled upon YouTube videos of Lego robots. That discovery opened my eyes to the endless possibilities of computer programs and the joy of challenging myself to bring ideas to life. Ever since, programming has been at the heart of my journey.</p>
-          <p>Outside of coding, I love <strong>traveling solo</strong> and find peace in nature through <strong>hiking</strong>. So far, I’ve climbed nearly <strong>12 mountains</strong>, and my dream is to reach <strong>100 peaks</strong>—maybe even Mount Everest or K2 one day. These adventures constantly remind me of perseverance, patience, and pushing beyond limits—the same values I carry into programming.</p>
+          <p>Outside of coding, I love <strong>traveling solo</strong> and find peace in nature through <strong>hiking</strong>. So far, I’ve climbed nearly <strong>12 mountains</strong>, and my dream is to reach <strong>100 peaks</strong>—maybe even Mount Everest or K2 one day.with <strong>corazon</strong> These adventures constantly remind me of perseverance, patience, and pushing beyond limits—the same values I carry into programming.</p>
           <p>I’m always eager to challenge myself with new goals and learn something every day. For example, this very website is something I built to share my work, thoughts, and projects with the world.</p>
           <p>I truly welcome <strong>constructive feedback</strong> and suggestions. If you have ideas on how I can improve—or if you’d just like to connect—I’d love to hear from you.</p>
         </article>
@@ -433,6 +433,7 @@
   </script>
 </body>
 </html>
+
 
 
 
